fdo#80486 writerfilter: RTF import: ignore \par inside \ftnsep

Word can apparently have complex footnote separators, but the
domain-mapper only sets a single flag that there is a separator
(m_bHasFtnSep), so the only thing that makes sense for \par here
is to completely ignore it.

(regression from e1afe4318787425dc40f2d0b1f02fa17e925c8da)

Change-Id: I32d9b01a0a9248ba646654295a74953a6cb74fb3
(cherry picked from commit 75c5679a96437caa6041d2550562f2a4db80d586)